// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectbox computed   cssStates 1`] = `
Object {
  "disabled": false,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
  "with-metadata": false,
  "with-search": false,
}
`;

exports[`Selectbox computed   mappedDisabledText 1`] = `""`;

exports[`Selectbox computed   mappedHelperText 1`] = `""`;

exports[`Selectbox computed   mappedLabelText 1`] = `""`;

exports[`Selectbox computed   searchText 1`] = `""`;

exports[`Selectbox computed   selected 1`] = `""`;

exports[`Selectbox computed   selectedLabelText 1`] = `"Please select"`;

exports[`Selectbox computed   selectedMetadataText 1`] = `""`;

exports[`Selectbox computed   states 1`] = `
Object {
  "disabled": false,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
}
`;

exports[`Selectbox computed disabled cssStates 1`] = `
Object {
  "disabled": true,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
  "with-metadata": false,
  "with-search": false,
}
`;

exports[`Selectbox computed disabled mappedDisabledText 1`] = `""`;

exports[`Selectbox computed disabled mappedHelperText 1`] = `""`;

exports[`Selectbox computed disabled mappedLabelText 1`] = `""`;

exports[`Selectbox computed disabled searchText 1`] = `""`;

exports[`Selectbox computed disabled selected 1`] = `""`;

exports[`Selectbox computed disabled selectedLabelText 1`] = `"Please select"`;

exports[`Selectbox computed disabled selectedMetadataText 1`] = `""`;

exports[`Selectbox computed disabled states 1`] = `
Object {
  "disabled": true,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
}
`;
